--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,21 @@
-version: '2'
+version: '3'
 services:
-  php:
-    image: yiisoftware/yii2-php:7.1-apache
+  mysql:
+    image: mysql
+    restart: always
+    environment:
+      MYSQL_DATABASE: maddevs_internship
+      MYSQL_ROOT_PASSWORD: mensetmanus90 
     volumes:
-      - ~/.composer-docker/cache:/root/.composer/cache:delegated
-      - ./:/app:delegated
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - '4306:3306'
+  php:
+    build: .
+    volumes:
+      - ~/.composer-docker/cache:/root/.composer/cache
+      - ./:/app
     ports:
       - '8000:80'
+    links: 
+      - mysql
